# blisk

./: .eslintignore  .gitignore  .ncurc.js  Cargo.toml  README.md  a.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  wrangler.toml
.github/workflows/: 0-deploy-backend.yml  1-deploy-frontend.yml
apps/blisk/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/perdrift/: package.json  svelte.config.js  tailwind.config.js  wrangler.toml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs  fly.toml  headers.h
backend/migrations/: 20240511000000_add_immut.up.sql  20240511000002_init_files_table.down.sql  20240511000003_add_users_view.down.sql  20240511000003_add_users_view.up.sql  20240513000001_init_books_table.up.sql  20240514051735_init_users_table.down.sql  20240514051735_init_users_table.up.sql  20240607131541_init_post_table.down.sql  20240614080110_init_comment_table.up.sql  20240719164527_add_functions.up.sql  20240820204459_init_book_reactions_tally.down.sql  20241212172953_init_books_entries_table.down.sql  20241212172953_init_books_entries_table.up.sql
backend/settings/: development.yaml  production.yaml
backend/src/: app.rs  lib.rs  main.rs  settings.rs
backend/src/hdfs/: file.rs  mod.rs
backend/src/routes/: auth.rs  books.rs  files.rs  mod.rs  posts.rs
backend/src/routes/users/: confirm.rs  login.rs  mod.rs  register.rs
backend/src/utils/: constants.rs  emails.rs  errors.rs  image.rs  mod.rs  password.rs  response.rs  structs.rs  uploads.rs  validators.rs
backend/src/utils/auth/: confirmation_token.rs  emails.rs  mod.rs  password.rs
backend/templates/: confirmation_email.html
crates/blisk_backend/: .env.example  .gitignore  Cargo.toml  build.rs  headers.h
crates/blisk_backend/migrations/: 20240511000000_add_immut.down.sql  20240511000001_init_users_table.down.sql  20240511000001_init_users_table.up.sql  20240511000002_init_files_table.up.sql  20240513000000_add_immut.down.sql  20240513000000_add_immut.up.sql  20240513000000_add_ltree.down.sql  20240513000001_init_books_table.down.sql  20240513000001_init_books_table.up.sql  20240513000002_add_books_view.down.sql  20240513000002_add_books_view.up.sql  20240514051735_init_users_table.down.sql  20240514051735_init_users_table.up.sql  20240607131541_init_post_table.up.sql  20240614080110_init_comment_table.up.sql  20240620092914_init_reactions_table.down.sql  20240620092914_init_reactions_table.up.sql  20240620092915_add_reactions_view.down.sql  20240620092915_add_reactions_view.up.sql  20240703102915_init_files_table.up.sql  20240719123152_add_create_reaction_function.down.sql  20240719123152_add_create_reaction_function.up.sql  20240719164527_add_fetch_replies.down.sql  20240719164527_add_fetch_replies.up.sql  20240719164527_add_functions.down.sql  20240719164527_add_functions.up.sql  20240720084059_add_fetch_posts.down.sql  20240720084059_add_fetch_posts.up.sql  20240724101847_add_book_categories.down.sql  20240724101847_add_book_categories.up.sql  20240724102059_add_book_author.down.sql  20240724102059_add_book_author.up.sql  20240724105433_add_book_view.down.sql  20240724105433_add_book_view.up.sql  20240810115005_add_fetch_comments.down.sql  20240810115005_add_fetch_comments.up.sql  20240814172243_init_oauth_client_table.down.sql  20240814172243_init_oauth_client_table.up.sql  20240820163743_init_users_books_table.down.sql  20240820163743_init_users_books_table.up.sql  (+3 more)
crates/blisk_backend/settings/: development.yaml
crates/blisk_backend/src/: app.rs  hdfs.rs  lib.rs  main.rs  settings.rs  telemetry.rs
crates/blisk_backend/src/hdfs/: file.rs  mod.rs
crates/blisk_backend/src/routes/: auth.rs  books.rs  comments.rs  files.rs  health.rs  mod.rs  posts.rs  reactions.rs  users.rs
crates/blisk_backend/src/routes/books/: create.rs  mod.rs  read.rs
crates/blisk_backend/src/routes/comments/: create.rs  read.rs
crates/blisk_backend/src/routes/posts/: create.rs  mod.rs  read.rs
crates/blisk_backend/src/routes/reactions/: create.rs  mod.rs
crates/blisk_backend/src/routes/users/: authenticate.rs  confirm.rs  login.rs  mod.rs  read.rs  register.rs
crates/blisk_backend/src/utils/: constants.rs  emails.rs  errors.rs  futures.rs  json.rs  mod.rs  oauth.rs  os.rs  response.rs  structs.rs  templating.rs  uploads.rs
crates/blisk_backend/src/utils/auth/: confirmation_token.rs  constants.rs  emails.rs  errors.rs  mod.rs  password.rs  structs.rs
crates/blisk_backend/src/utils/books/: errors.rs
crates/blisk_backend/src/utils/comments/: errors.rs  mod.rs  structs.rs  utils.rs
crates/blisk_backend/src/utils/posts/: errors.rs  structs.rs
crates/blisk_backend/src/utils/reactions/: structs.rs
crates/blisk_backend/src/utils/uploads/: errors.rs
crates/blisk_backend/src/utils/users/: constants.rs  emails.rs  errors.rs  structs.rs
frontend/: .env.example  .ncurc.js  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts  service-worker.ts  utilities.css
src/: app.css  app.html
src/lib/: constants.ts
(+274 files in other folders)
