[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros"] }
config = { version = "0.14.0", features = ["yaml"] }
dotenv = "0.15.0"
serde = "1.0.201"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
