[package]
name = "blisk_backend"
version = "0.1.0"
authors = ["DuCanhGH <ngoducanh2912@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.64.0"
axum = { version = "0.7.9", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.6", features = ["cookie", "query", "typed-header"] }
axum_typed_multipart = "0.13.2"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.1", features = ["yaml"] }
dotenv = "0.15.0"
errno = "0.3.10"
futures = "0.3.31"
http-body-util = "0.1.2"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.10", features = ["tokio1-native-tls"] }
libc = "0.2.167"
mime_guess = "2.0.5"
minijinja = { version = "2.5.0", features = ["loader"] }
rand = "0.8.5"
redis = { version = "0.27.5", features = ["tokio-comp"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.12"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "fs", "set-header", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.19.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.70.1"
