[package]
name = "blisk_backend"
version = "0.1.0"
authors = ["DuCanhGH <ngoducanh2912@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum_typed_multipart = "0.11.1"
chrono = "0.4.38"
config = { version = "0.14.0", features = ["yaml"] }
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.7", features = ["tokio1-native-tls"] }
minijinja = { version = "2.0.1", features = ["loader"] }
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
regex = "1.10.6"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log"] }
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.18.1", features = ["derive"] }
